# top-down-rpg

./: .clangd  .gitignore  CMakeLists.txt
src/: editor.cpp  editor.h  entity.h  entity_registry.h  game.cpp  game.h  main.cpp  map.cpp  map.h  player.cpp  player.h  sprite_animation.h  tile.h
